<resources>
    <string name="app_name">labtest02</string>
    <string name="welcome_back">Welcome back</string>
    <string name="fahad_azeez">Fahad Azeez</string>
    <string name="discover_the_best_place_nto_travel">Discover the Best Place \nTo Travel</string>
    <string name="popular">Popular</string>
    <string name="category">Category</string>
    <string name="let_s_enjoy_the_nbeautiful_world">Let\'s Enjoy The \nBeautiful World</string>
    <string name="explorer_new_places_in_the_world_nand_get_new_experiences">Explorer new places in the world\nand get new experiences</string>
    <string name="get_started">Get Started</string>
    <string name="house_with_a_great_view">House with a great view</string>
    <string name="location">location</string>
    <string name="_2_bed">2 bed</string>
    <string name="guide">Guide</string>
    <string name="wifi">Wifi</string>
    <string name="description">Description</string>
    <string name="in_this_beach_hotel_there_are_rooms_with_two_beds_and_more_full_facilities_and_also_there_are_wifi_facility_is_available_for_each_room_in_the_hotel">in this beach hotel, there are rooms with two beds and more full facilities. and Also there are wifi facility is available for each room in the hotel.</string>
    <string name="_1_200">$1,200</string>
    <string name="book_now">Book Now</string>
</resources>