<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/picImg"
                    android:layout_width="match_parent"
                    android:layout_height="355dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/pic2" />

                <ImageView
                    android:id="@+id/backBtn"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/back_arrow" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintBottom_toBottomOf="@+id/backBtn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/backBtn"
                    app:srcCompat="@drawable/fav" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:text="@string/house_with_a_great_view"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/marker2" />

                <TextView
                    android:id="@+id/locationTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    app:srcCompat="@drawable/star2" />

                <TextView
                    android:id="@+id/scoreTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="4.8"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.333"
                    android:background="@drawable/border_background">

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/bed" />

                    <TextView
                        android:id="@+id/bedTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/_2_bed"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
                        app:layout_constraintStart_toEndOf="@+id/imageView19"
                        app:layout_constraintTop_toTopOf="@+id/imageView19" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="0.333"
                    android:background="@drawable/border_background">

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/guide" />

                    <TextView
                        android:id="@+id/guideTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/guide"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
                        app:layout_constraintStart_toEndOf="@+id/imageView19"
                        app:layout_constraintTop_toTopOf="@+id/imageView19" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="0.333"
                    android:background="@drawable/border_background">

                    <ImageView
                        android:id="@+id/imageView19"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/wifi" />

                    <TextView
                        android:id="@+id/wifiTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/wifi"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView19"
                        app:layout_constraintStart_toEndOf="@+id/imageView19"
                        app:layout_constraintTop_toTopOf="@+id/imageView19" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                />

            <TextView
                android:id="@+id/descriptionTxt"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/in_this_beach_hotel_there_are_rooms_with_two_beds_and_more_full_facilities_and_also_there_are_wifi_facility_is_available_for_each_room_in_the_hotel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="16dp"

                android:orientation="horizontal">

                <TextView
                    android:id="@+id/priceTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="clip_vertical"
                    android:layout_weight="0.5"
                    android:text="@string/_1_200"
                    android:textColor="@color/black"
                    android:textSize="34sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button"
                    style="@android:style/Widget.Button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/intro_background"
                    android:text="@string/book_now"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>